--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,8 @@ services:
     container_name: flask_app
     ports:
       - "5001:5000"
-    environment:
-      - FLASK_APP=app.app
-      - FLASK_RUN_PORT=5000
-      - FLASK_ENV=development
+    env_file:
+      - .env
     depends_on:
       - redis
     volumes:
@@ -19,6 +17,8 @@ services:
     build: .
     container_name: celery_worker
     command: celery -A app.celery worker --loglevel=info
+    env_file:
+      - .env
     depends_on:
       - redis
     volumes:
@@ -27,5 +27,7 @@ services:
   redis:
     image: redis:7.2
     container_name: redis
+    env_file:
+      - .env
     ports:
       - "6379:6379"
