--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - redis
     volumes:
       - .:/cdvist
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - app_network
 
@@ -29,6 +30,8 @@ services:
       - redis
     volumes:
       - .:/cdvist
+      - /var/run/docker.sock:/var/run/docker.sock
+
     networks:
       - app_network
 
